--- a/reddit-clone/package.json
+++ b/reddit-clone/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^5.0.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router": "3.2.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
