--- a/reddit-clone/package.json
+++ b/reddit-clone/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.2.2",
     "firebase": "^5.0.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
