--- a/reddit-clone/package.json
+++ b/reddit-clone/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.2.2",
+    "@material-ui/icons": "^1.1.0",
     "firebase": "^5.0.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
